# plugIN-hello

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.aarch64  Dockerfile.jetson  Dockerfile.x86_64  LICENSE  README.md  build_info.h.in  install_cmake.sh  install_ninja.sh  make_release_branch.ps1  make_release_branch.sh  plugin_credential.json  release.sh
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
dep/openssl/win_x64/lib/: libcrypto.lib  libssl.lib
dep/openssl/win_x86/lib/: libcrypto.lib  libssl.lib
resource_dir_linux/: install_plugIN.sh  plugin_alert.json  plugin_state.json  plugin_update_template.json  plugin_update_template_new.json  uninstall_plugIN.sh
resource_dir_windows/: install_plugIN.bat  install_plugIN.ps1  plugin_command_ack.json  plugin_update_template.json  uninstall_plugIN.bat  uninstall_plugIN.ps1
src/: main.cpp  websocket_client.cpp  websocket_client.h
test/: test.md  test_octo_sdk.sh
